[gd_scene load_steps=13 format=3 uid="uid://r1nn4brs4uhp"]

[ext_resource type="Script" path="res://src/game/facility/door.gd" id="1"]
[ext_resource type="Animation" uid="uid://cfa1hwp0hgel3" path="res://animations/door/door_anim.tres" id="2"]
[ext_resource type="Animation" path="res://animations/door/door_error.tres" id="3"]
[ext_resource type="Animation" uid="uid://bvp6ge02oyju7" path="res://animations/door/secure_door_anim.tres" id="4"]
[ext_resource type="AudioStream" uid="uid://ddejmf772f1c5" path="res://sounds/interact/keycard_use2.ogg" id="5"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(4, 8)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(4, 8)

[sub_resource type="CompressedTexture2D" id="3"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_47rcw"]
_data = {
"door_anim": ExtResource("2"),
"door_error": ExtResource("3"),
"secure_door_anim": ExtResource("4")
}

[sub_resource type="OccluderPolygon2D" id="4"]
polygon = PackedVector2Array(-16, -4, -16, 4, -12, 4, -12, -4)

[sub_resource type="OccluderPolygon2D" id="5"]
polygon = PackedVector2Array(12, -4, 16, -4, 16, 4, 12, 4)

[sub_resource type="RectangleShape2D" id="6"]
size = Vector2(32, 30)

[node name="Door" type="StaticBody2D" groups=["Save", "door"]]
script = ExtResource("1")

[node name="DoorStatus" type="ColorRect" parent="."]
offset_left = 12.0
offset_top = 4.0
offset_right = 16.0
offset_bottom = 8.0
color = Color(0.0431373, 0.784314, 0, 1)

[node name="DoorStatus2" type="ColorRect" parent="."]
offset_left = -16.0
offset_top = -8.0
offset_right = -12.0
offset_bottom = -4.0
color = Color(0.0431373, 0.784314, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-14, 0)
shape = SubResource("1")
disabled = true

[node name="CollisionShape2" type="CollisionShape2D" parent="."]
position = Vector2(14, 0)
shape = SubResource("2")
disabled = true

[node name="DoorModel" type="Sprite2D" parent="."]
texture = SubResource("3")
hframes = 13
frame = 12

[node name="DoorAnimation" type="AnimationPlayer" parent="DoorModel"]
libraries = {
"": SubResource("AnimationLibrary_47rcw")
}

[node name="LightOccluderLeft" type="LightOccluder2D" parent="."]
occluder = SubResource("4")

[node name="LightOccluderRight" type="LightOccluder2D" parent="."]
occluder = SubResource("5")

[node name="DoorSound" type="AudioStreamPlayer2D" parent="."]
max_distance = 300.0
bus = &"Sound"

[node name="KeycardSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5")
max_distance = 300.0
bus = &"Sound"

[node name="InteractionArea" type="Area2D" parent="." groups=["door"]]
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("6")

[connection signal="body_entered" from="InteractionArea" to="." method="_on_InteractionArea_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_InteractionArea_body_exited"]
